adjust spacing to fix linewrapping for prices >=100

--- a/src/WEB-INF/shop.css
+++ b/src/WEB-INF/shop.css
@@ -57,7 +57,7 @@ label.horizontal {
 }
 
 table {
-	border-spacing: 25px 5px;
+	border-spacing: 20px 5px;
 }
 
 td.numeric, th.numeric, input.numeric {
